test/1.4/errors/T_ENMETH.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

bank b {
}

/// ERROR ENMETH
export b as "fails";
